Layout and basic functionalities update
Changed the appBar layput,
Implemented basic login input check,
Implemented app menu options to change the theme and sign out

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,15 @@
     android:background="?attr/backgroundColor"
     android:orientation="vertical">
 
-    <include layout="@layout/appbar"/>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorAccent"
+        app:title="@string/app_name"
+        app:titleTextColor="?attr/textColor"
+        android:theme="@style/AppTheme"
+        android:elevation="4dp"/>
 
     <androidx.cardview.widget.CardView
         android:layout_margin="15dp"
