--- a/app/src/main/res/layout-v21/activity_login_screen.xml
+++ b/app/src/main/res/layout-v21/activity_login_screen.xml
@@ -10,7 +10,7 @@
 
 
     <EditText
-        android:id="@+id/employeeEmail"
+        android:id="@+id/employeeName"
         android:drawableStart="@drawable/ic_email"
         android:drawablePadding="10dp"
         android:layout_width="match_parent"
@@ -20,12 +20,12 @@
         android:textColorHint="?attr/textColor"
         android:paddingStart="10dp"
         android:textSize="20sp"
-        android:hint="@string/email"
+        android:hint="@string/first_name"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="306dp"
-        android:inputType="textEmailAddress"
+        android:inputType="textPersonName"
         tools:ignore="RtlSymmetry" />
 
     <EditText
@@ -40,7 +40,7 @@
         android:hint="@string/employee_number"
         android:drawableStart="@drawable/ic_person"
         android:drawablePadding="10dp"
-        android:layout_below="@id/employeeEmail"
+        android:layout_below="@id/employeeName"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
