--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -10,7 +10,7 @@
 
 
     <EditText
-        android:id="@+id/employeeEmail"
+        android:id="@+id/employeeName"
         android:drawableStart="@drawable/ic_email"
         android:drawablePadding="10dp"
         android:layout_width="match_parent"
@@ -20,13 +20,14 @@
         android:textColorHint="?attr/textColor"
         android:paddingStart="10dp"
         android:textSize="20sp"
-        android:hint="@string/email"
+        android:hint="@string/first_name"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="306dp"
-        android:inputType="textEmailAddress"
-        tools:ignore="RtlSymmetry" />
+        android:inputType="textPersonName"
+        tools:ignore="RtlSymmetry"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/employeeNumberInput"
@@ -40,12 +41,13 @@
         android:hint="@string/employee_number"
         android:drawableStart="@drawable/ic_person"
         android:drawablePadding="10dp"
-        android:layout_below="@id/employeeEmail"
+        android:layout_below="@id/employeeName"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:inputType="number"
-        tools:ignore="RtlSymmetry" />
+        tools:ignore="RtlSymmetry"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/employeePassword"
@@ -65,7 +67,8 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         android:inputType="textPassword"
-        tools:ignore="RtlSymmetry" />
+        tools:ignore="RtlSymmetry"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/buttonLogin"
