--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/name"
+                        android:id="@+id/nameOnCard"
                         android:textColor="?attr/textColor"
                         android:text="@string/first_name"
                         android:inputType="text"
@@ -57,7 +57,7 @@
                         tools:ignore="TextViewEdits" />
 
                     <TextView
-                        android:id="@+id/lastName"
+                        android:id="@+id/lastNameOnCard"
                         android:textColor="?attr/textColor"
                         android:text="@string/last_name"
                         android:inputType="text"
@@ -67,7 +67,7 @@
                         tools:ignore="TextViewEdits" />
 
                     <TextView
-                        android:id="@+id/employeeNumber"
+                        android:id="@+id/employeeNumberOnCard"
                         android:textColor="?attr/textColor"
                         android:text="@string/employee_number"
                         android:inputType="number"
